改为增加变量std::unordered_map<std::string, std::string> id_status_;//

--- a/caching/CMakeLists.txt
+++ b/caching/CMakeLists.txt
@@ -11,7 +11,8 @@ include_directories(include)
 #add_executable(cache_belady_aggdelay src/cache_belady_aggdelay.cpp)
 ##### Online Policies #####
 add_executable(cache_lru_my src/cache_lru_my.cpp)
-add_executable(cache_lru src/cache_lru.cpp)
+add_executable(cache_lru src/cache_lru.cpp )
+add_executable(testmap src/testmap.cpp)
 #add_executable(cache_arc src/cache_arc.cpp)
 #add_executable(cache_lhd src/cache_lhd.cpp)
 #add_executable(cache_lru_aggdelay src/cache_lru_aggdelay.cpp)
